--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="action_settings">Settings</string>
+    <string name="favorites">Favorites</string>
     <string name="sort_by">Sort by</string>
     <string name="title_activity_settings">Settings</string>
 
@@ -18,6 +19,8 @@
     <string name="movie_poster">Movie Poster</string>
     <string name="year">Year</string>
     <string name="rating">Rating</string>
+
+    <string name="no_favorites">No Favorites Yet!</string>
 
     <!-- Example General settings -->
     <string name="pref_header_general">General</string>
